--- a/public/assets/css/loginstyle.css
+++ b/public/assets/css/loginstyle.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 
-html {
+body {
     background-size: cover;
     font-size: 10px;
     position: absolute;
@@ -14,7 +14,7 @@ html {
 }
 canvas{
     position: absolute;
-    width: 100%; height: 100%;
+    width: 100%;
     top: 0; right: 0; bottom: 0; left: 0;
 }
 /* =========================================
@@ -33,7 +33,6 @@ Stark Industries Logo
     font-family: 'Ubuntu', sans-serif;
     color: #00a4a2;
     font-size: 48px;
-    font-size: 4.8rem;
     font-weight: bold;
     position: absolute;
     text-shadow: 0 0 10px #000, 0 0 20px #000, 0 0 30px #000, 0 0 40px #000, 0 0 50px #000, 0 0 60px #000, 0 0 70px #000;
