--- a/public/assets/css/loginstyle.css
+++ b/public/assets/css/loginstyle.css
@@ -9,12 +9,10 @@ body {
     font-size: 10px;
     position: absolute;
     text-align: center;
-    width: 100%;
-    background: #333;
+    background: white;
 }
 canvas{
-    position: absolute;
-    width: 100%;
+
     top: 0; right: 0; bottom: 0; left: 0;
 }
 /* =========================================
@@ -36,7 +34,7 @@ Stark Industries Logo
     font-weight: bold;
     position: absolute;
     text-shadow: 0 0 10px #000, 0 0 20px #000, 0 0 30px #000, 0 0 40px #000, 0 0 50px #000, 0 0 60px #000, 0 0 70px #000;
-    top: 100px;
+    top: 20px;
     padding: 20px;
 }
 #logo h1:before {
@@ -80,7 +78,7 @@ Log in form => Connexion
     border-radius: 5px;
     display: inline-block;
     height: 298px;
-    margin: 239px 0 0 68px;
+    margin: 150px 0 0 68px;
     position: relative;
     z-index: 4;
     width: 500px;
@@ -101,7 +99,6 @@ Log in form => Connexion
     display: block;
     font-family: 'Cabin', helvetica, arial, sans-serif;
     font-size: 13px;
-    font-size: 1.3rem;
     height: 40px;
     margin: 20px auto 10px;
     padding: 0 10px;
@@ -122,7 +119,6 @@ Log in form => Connexion
     font-family: 'Ubuntu', sans-serif;
     color: #00a4a2;
     font-size: 24px;
-    font-size: 2.4rem;
     font-weight: bold;
     text-shadow: 0 0 10px #000, 0 0 20px #000, 0 0 30px #000, 0 0 40px #000, 0 0 50px #000, 0 0 60px #000, 0 0 70px #000;
     padding: 15px;
@@ -195,7 +191,7 @@ Log in form Inscription
     border-radius: 5px;
     display: inline-block;
     height: 530px;
-    margin: 203px 0 0 60px;
+    margin: 136px 0 0 60px;
     position: relative;
     z-index: 4;
     width: 500px;
@@ -303,11 +299,10 @@ Spinner => Connexion
     height: 700px;
     width: 700px;
     position: absolute;
-    top: 80px;
+    top: 20px;
     left: 45%;
     margin-left: -250px;
     overflow: hidden;
-    opacity: 0.4;
     z-index: -3;
 }
 
@@ -497,4 +492,13 @@ Animation Keyframes
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
     }
+}
+
+/* =========================================
+Utilitaires
+========================================= */
+
+.container {
+    width: 1124px;
+    margin: auto;
 }
