--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,263 +1,26 @@
-/*****************************
-	DÉCLARATION DES POLICES
- *****************************/
-@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500,700,900);
-@import url(https://fonts.googleapis.com/css?family=Lobster);
-@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Bangers);
-
-
-/*****************************
-		  UTILITAIRES
- *****************************/
-
-body{
-	font-family: 'Roboto', sans-serif;
+html, body {
+	font-family: Consolas, monaco, monospace;
+	background-color: #272822;
+	color: #F8F8F2;
 }
 
 .container {
-  width: 1100px;
-  margin: auto; 
+	margin: 50px;
 }
 
-.clearfix {
-  clear: both;
-  display: block; 
-}
-
-/*****************************
-		HIGH NAVIGATION
- *****************************/
-
-/*** Titre principal ***/
-#high_nav h1{
-	float: left;
-	font-family: 'Bangers', sans-serif;
-	font-size: 45px;
-	color: #FAB368;
-	line-height: 42px;
-	padding: 15px 0;
-	text-shadow: 1px 1px 1px #FFF;
-}
-
-#high_nav strong span:first-child{
-	color: #78F55B;
-}
-
-#high_nav strong span:nth-child(2){
-	font-weight: 600;
-}
-
-/*** Barre de navigation ***/
-#high_nav{
-	background-color: #252424;
-	color: #FFF;
-	margin-bottom: 20px;
-}
-
-/*** Liens de navigation ***/
-#high_nav ul{
-	float: right;
+a {
 	text-decoration: none;
+	color: #A6E22E;
 }
 
-#high_nav ul li{
-	float: left;
+a:hover {
+	color: #F92672;
 }
 
-#high_nav ul li a{
-	margin-right: 15px;
-	color: #FFF;
-	display: inline-block;
-	text-decoration: none;
-	padding: 25px 15px;
+h1 {
+	color: #F92672;
 }
 
-/*** Formulaire de recherche ***/
-#high_nav input{
-	float: right;
-	background-color: #252424;
-	border: none;
-	margin-top: 25px;
-	color: #FFF;
-	font-weight: 600;	
-} 
-
-button[name="search_submit"]{
-	float: right;
-	margin-top: 23px;
-	font-size: 15px;
-	border: none;
-	color: #FFF;
-	background-color: #252424;
-}
-
-
-/*********************************
-			  SLIDER
- *********************************/
-
-#bonbon_fury{
-	background-image: url('../img/bonbon-fury.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	padding: 300px 0px;
-}
-
-#fight_club{
-	background-image: url('../img/fight-club.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	padding: 300px 0px;
-}
-
-#sport_nutrition{
-	background-image: url('../img/sport-nutrition.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center;
-	padding: 300px 0px;
-	display: block;
-}
-
-
-/****************************
-	SECTION NEW BOUTIQUE
- ****************************/
-
-/*** Section new shop ***/
-#new_shop{
-	color: #322F2F;
-	padding-top: 570px;
-	padding-bottom: 50px;
-	font-family: 'Montserrat', sans-serif;
-}
-
-#new_shop h3{
-	font-size: 35px; 
-}
-
-#new_shop article:first-of-type{
-	margin-left: 0;
-}
-
-#new_shop .container article:nth-of-type(2n){
-	margin-left: 0;
-}
-
-/*** Article découverte boutique ***/
-.shop_discovery{
-	float: left;
-	width: 30%;
-	margin-left: 5%;
-	padding-top: 50px;
-}
-
-#new_shop img{
-	width: 100px;
-	height: 100px;
-	display: block;
-	margin: 0 auto;
-}
-
-.shop_title{
-	text-align: center;
-	font-size: 30px;
-	padding-top: 15px;
-}
-
-.shop_discovery p{
-	text-align: center;
-	padding: 30px;
-}
-
-/****************************
-	SECTION ABOUT US
- ****************************/
-
-#about_us{
-	font-family: 'Montserrat', sans-serif;
-	color: #322F2F;
-}
-
-#about_us p{
-	margin-top: 25px;
-}
-
-#about_us p:first-of-type{
-	padding-bottom: 50px;
-}
-
-#malika, #julie, #halima, #fra_xa, #steven{
-	width: 18%;
-	margin-right: 2%;
-	float: left;
-	text-align: center;
-}
-
-#steven{
-	margin-right: 0;
-}
-
-#about_us h3{
-	font-size: 35px;
-	padding-bottom: 15px;
-}
-
-#malika::before{
-	content: "";
-	display: block;
-	width: 75px;
-	background-image: url('../img/malika.jpg');
-	background-size: cover;
-	height: 75px;
-	border-radius: 75px;
-	margin: 0px auto 20px;
-}
-
-#julie::before{
-	content: "";
-	display: block;
-	width: 75px;
-	background-image: url('../img/julie.jpg');
-	background-size: cover;
-	height: 75px;
-	border-radius: 75px;
-	margin: 0px auto 20px;
-}
-
-#halima::before{
-	content: "";
-	display: block;
-	width: 75px;
-	background-image: url('../img/halima.jpg');
-	background-size: cover;
-	height: 75px;
-	border-radius: 75px;
-	margin: 0px auto 20px;
-}
-
-#fra_xa::before{
-	content: "";
-	display: block;
-	width: 75px;
-	background-image: url('../img/fra_xa.jpg');
-	background-size: cover;
-	height: 75px;
-	border-radius: 75px;
-	margin: 0px auto 20px;
-}
-
-#steven::before{
-	content: "";
-	display: block;
-	width: 75px;
-	background-image: url('../img/steven.jpg');
-	background-size: cover;
-	height: 75px;
-	border-radius: 75px;
-	margin: 0px auto 20px;
+h2 {
+	color: #66D9EF;
 }
