--- a/public/assets/css/loginstyle.css
+++ b/public/assets/css/loginstyle.css
@@ -10,9 +10,13 @@ body {
     text-align: center;
     background: white;
 }
+
+
+
 canvas{
     position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
+    top:50px; right: 0; bottom: 0; left: 0;
+    z-index: 0;
 }
 /* =========================================
 Stark Industries Logo
@@ -83,7 +87,7 @@ Log in form => Connexion
     border-radius: 5px;
     display: inline-block;
     height: 298px;
-    margin: 190px 0 0 68px;
+    margin: 148px 29px 0 0;
     position: relative;
     z-index: 4;
     width: 500px;
@@ -197,7 +201,7 @@ Log in form Inscription
     border-radius: 5px;
     display: inline-block;
     height: 530px;
-    margin: 173px 0 0 60px;
+    margin: 97px 33px 0 0;
     position: relative;
     z-index: 4;
     width: 500px;
@@ -235,7 +239,6 @@ Log in form Inscription
 }
 .stark-login2 label{
     font-family: 'Ubuntu', sans-serif;
-    animation: after-glow 2s ease-out infinite alternate;
     color: #00a4a2;
     font-size: 2.4rem;
     font-weight: bold;
@@ -301,10 +304,10 @@ Spinner => Connexion
     border-radius: 50%;
     border: 10px solid #00a4a2;
     box-shadow: 0 0 0 2px black, 0 0 0 6px #00fffc;
-    height: 700px;
-    width: 700px;
+    height: 600px;
+    width: 600px;
     position: absolute;
-    top: 20px;
+    top: 86px;
     left: 45%;
     margin-left: -250px;
     overflow: hidden;
@@ -315,8 +318,8 @@ Spinner => Connexion
     background: #FFF;
     border-radius: 50%;
     border: 36px solid #00a4a2;
-    height: 660px;
-    width: 660px;
+    height: 560px;
+    width: 560px;
     margin: 10px;
 }
 #inner-cirlce1:before {
@@ -347,10 +350,10 @@ Spinner inscription
     border-radius: 50%;
     border: 10px solid #00a4a2;
     box-shadow: 0 0 0 2px black, 0 0 0 6px #00fffc;
-    height: 800px;
-    width: 800px;
+    height: 700px;
+    width: 700px;
     position: absolute;
-    top: 0px;
+    top: 83px;
     left: 45%;
     margin-left: -300px;
     overflow: hidden;
@@ -361,8 +364,8 @@ Spinner inscription
     background: #FFF;
     border-radius: 50%;
     border: 36px solid #00a4a2;
-    height: 760px;
-    width: 760px;
+    height: 660px;
+    width: 660px;
     margin: 10px;
 }
 #inner-cirlce2:before {
@@ -502,7 +505,8 @@ Animation Keyframes
 Utilitaires
 ========================================= */
 
-.container {
+.containerconnect {
     width: 1124px;
     margin: auto;
+    height: 64em;
 }
