--- a/public/assets/css/home-style.css
+++ b/public/assets/css/home-style.css
@@ -83,6 +83,7 @@ body{
 	text-decoration: none;
 	padding: 27px 15px;
 	border-bottom: 0px solid #80C2BB;
+	font-size: 16px;
 }
 
 #high_nav ul li a:hover{
