--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,20 +8,20 @@ div.separator{
     display:block;
 }
 
-#cont section{
+#add-shop section{
     width:25%;
     float:left;
     margin:0 50px;
     text-align:left;
 }
-#cont{
+#add-shop .container{
     background: #efefef;
     width: 100%;
     padding:100px 100px;
     font-family: 'Titillium Web', sans-serif;
 }
 
-#cont h2{
+#add-shop h2{
     text-align:center;
     font-family: 'Titillium Web', sans-serif;
     font-size:40px;
@@ -29,16 +29,17 @@ div.separator{
     color:#CCCCCC;
 }
 
-#cont h3{
+#add-shop h3{
     color:#80C2BB;
     font-size: 3em;
     font-family: 'Lobster', cursive;
     text-align:center;
 }
-#cont .error{
+#add-shop .error{
     color: red;
 }
-#cont legend {
+
+#add-shop legend {
     color:#80C2BB;
     font-size: 4em;
     font-family: 'Lobster', cursive;
@@ -46,22 +47,22 @@ div.separator{
     padding-bottom: 50px;
 }
 
-#cont form label{
+#add-shop form label{
     text-transform:uppercase;
     font-size:15px;
 }
 
-#cont form{
+#add-shop form{
     width:100%;
 }
 
-#cont form p{
+#add-shop form p{
     color:#313A3D;
     margin:20px 0px;
     font-size:20px;
 }
 
-#cont input{
+#add-shop input{
     width:100%;
     height:2em;
     margin-top:10px;
@@ -76,11 +77,11 @@ div.separator{
     font-family: 'Titillium Web', sans-serif;
 }
 
-#cont input:focus{
+#add-shop input:focus{
     outline: none;
 }
 
-#cont textarea{
+#add-shop textarea{
     width:100%;
     height:10em;
     margin-bottom:20px;
@@ -94,11 +95,11 @@ div.separator{
     padding: 10px 5%;
 }
 
-#cont textarea:focus{
+#add-shop textarea:focus{
     outline: none;
 }
 
-#cont select{
+#add-shop select{
     border: none;
     background: #E8E9EA;
     font-size: 0.8em;
@@ -109,21 +110,21 @@ div.separator{
     margin-bottom:4em;
 }
 
-#cont select:focus{
+#add-shop select:focus{
     outline: none;
     border:none;
 }
 
-#cont select:hover{
+#add-shop select:hover{
     outline: none;
     border:none;
 }
 
-#cont input[type="file"]{
+#add-shop input[type="file"]{
     background-color:#efefef;
 }
 
-#cont p button{
+#add-shop p button{
     background:#313A3D;
     color: white;
     -webkit-appearance: none;
@@ -145,7 +146,7 @@ div.separator{
 
 }
 
-#cont button:hover {
+#add-shop button:hover {
     background: #80C2BB;
     color: white;
 }
