--- a/public/assets/css/news-style.css
+++ b/public/assets/css/news-style.css
@@ -11,7 +11,11 @@
   font-family: 'Titillium Web', sans-serif;
 }
 
-#contact{
+#news_gender{
+  font-size: 20px;
+}
+
+#newsletter{
   background: #efefef;
   margin: 60px auto 120px;
   text-align: center;
@@ -22,7 +26,7 @@
   border-top: 15px solid #313A3D;
 }
 
-#contact h1 {
+#newsletter h1 {
   margin-bottom: 40px;
   font-size: 4em;
   font-family: 'Lobster', cursive;
@@ -82,7 +86,7 @@ form .field textarea {
   background: #E8E9EA;
   width: 100%;
   margin: 0;
-  padding: 18px 0;
+  padding: 18px 0 ;
   padding-left: 19.5%;
   color: black;
   font-size: 1.4em;
@@ -91,7 +95,7 @@ form .field textarea {
 }
 form .field input[type="text"]#msg,
 form .field textarea#msg {
-  height: 50px;
+  height: 18px;
   margin-bottom: 20px;
   resize: none;
   -webkit-transition: all 333ms ease-in-out;
@@ -99,6 +103,9 @@ form .field textarea#msg {
   -o-transition: all 333ms ease-in-out;
   -ms-transition: all 333ms ease-in-out;
   transition: all 333ms ease-in-out;
+}
+#news_gender{
+  margin-top: 30px;
 }
 form .field input[type="text"]:focus, form .field input[type="text"].focused,
 form .field textarea:focus,
@@ -108,7 +115,7 @@ form .field textarea.focused {
 form .field input[type="text"]:focus#msg, form .field input[type="text"].focused#msg,
 form .field textarea:focus#msg,
 form .field textarea.focused#msg {
-  padding-bottom: 200px;
+  padding-bottom: 50px;
 }
 form .field input[type="text"]:focus + label, form .field input[type="text"].focused + label,
 form .field textarea:focus + label,
@@ -117,12 +124,10 @@ form .field textarea.focused + label {
   background: #D1D2D2;
   color: #313A3D;
 }
-
 form .field input[type="text"].focused + label,
 form .field textarea.focused + label {
   color: #FD9638;
 }
-
 form .field:hover label {
   width: 18%;
   background: #313A3D;
@@ -162,7 +167,6 @@ form input[type="submit"]:active {
   background: #D1D2D2;
 }
 
-
 .errors{
   font-size: 18px;
   color: #1D8C7E;
@@ -170,31 +174,34 @@ form input[type="submit"]:active {
 
 @media (max-width: 992px) and (min-width: 768px){
 
-  #contact{
+  #newsletter{
     font-size: 1.2em;
   }
 
-  #contact h1{
+  #newsletter h1{
     font-size: 5em;
   }
 }
 
 @media (max-width: 768px) and (min-width: 500px){
 
-  #contact{
+  #newsletter{
     font-size: 1.2em;
     width: 95%;
+  }
+
+  #hire{
+    background-color: #efefef;
   }
 }
 
 @media (max-width: 500px){
   
-  #contact{
+  #newsletter{
     width: 100%;
     font-size: 1.2em;
     border-top: none;
     margin: 0 auto;
-    border-bottom: 5px solid #80C2BB;
     padding-bottom: 0;
     padding-top: 2px;
   }
