--- a/public/assets/css/shopviewstyle.css
+++ b/public/assets/css/shopviewstyle.css
@@ -1,31 +1,17 @@
-@import url(http://weloveiconfonts.com/api/?family=fontawesome);
-
 @font-face {
 	src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/polar.otf");
 	font-family: 'Polar';
 }
-
-/*------------------ UTILITAIRES --------------------------*/
-.clearfix {
-	display: block;
-	clear: both;
-}
-
-/*---------------------------------------------------------------------------------*/
-/*DEBUT SLIDER PRINCIPAL*/
 *, *:before, *:after {
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
-
-html, body {
+#boutik {
+	padding-top: 20px;
 	font-size: 62.5%;
-	height: 100%;
+	height: 810px;
 	overflow: hidden;
-}
-
-body {
 	background: #000;
 }
 
@@ -41,7 +27,7 @@ svg {
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	cursor: auto;
+	cursor: all-scroll;
 }
 
 .slider-control {
@@ -56,11 +42,11 @@ svg {
 	opacity: 0;
 }
 .slider-control.inactive:hover {
-	cursor: hand;
+	cursor: auto;
 }
 .slider-control:not(.inactive):hover {
 	opacity: 1;
-	cursor: hand;
+	cursor: pointer;
 }
 .slider-control.left {
 	left: 0;
@@ -165,12 +151,11 @@ svg {
 	background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-3.jpg");
 }
 .slide:nth-child(1) .slide__overlay-path {
-	fill: #80c2bb;
+	fill: #e99c7e;
 }
 @media (max-width: 991px) {
 	.slide:nth-child(1) .slide__text {
-		background-color: #80c2bb;
-        opacity: 0.7;
+		background-color: rgba(233, 156, 126, 0.8);
 	}
 }
 .slide:nth-child(2) {
@@ -178,14 +163,14 @@ svg {
 }
 .slide:nth-child(2) .slide__bg {
 	left: -50%;
+	background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-2.jpg");
 }
 .slide:nth-child(2) .slide__overlay-path {
-	fill: #80c2bb;
+	fill: #e1ccae;
 }
 @media (max-width: 991px) {
 	.slide:nth-child(2) .slide__text {
-		background-color: #80c2bb;
-        opacity: 0.7;
+		background-color: rgba(225, 204, 174, 0.8);
 	}
 }
 .slide:nth-child(3) {
@@ -196,21 +181,30 @@ svg {
 	background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-1.jpg");
 }
 .slide:nth-child(3) .slide__overlay-path {
-	fill: #80c2bb;
+	fill: #adc5cd;
 }
 @media (max-width: 991px) {
 	.slide:nth-child(3) .slide__text {
-		background-color: #80c2bb;
-        opacity: 0.7;
+		background-color: rgba(173, 197, 205, 0.8);
 	}
 }
-
+.slide:nth-child(4) {
+	left: 300%;
+}
+.slide:nth-child(4) .slide__bg {
+	left: -150%;
+	background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/3d-slider-4.jpg");
+}
+.slide:nth-child(4) .slide__overlay-path {
+	fill: #cbc6c3;
+}
 @media (max-width: 991px) {
 	.slide:nth-child(4) .slide__text {
 		background-color: rgba(203, 198, 195, 0.8);
 	}
 }
 .slide__content {
+	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -237,12 +231,13 @@ svg {
 	}
 }
 .slide__overlay path {
-	opacity: 0.7;
+	opacity: 0.8;
 }
-.slide__text{
+.slide__text {
 	position: absolute;
-	width: 30%;
-	left: 5%;
+	width: 25%;
+	bottom: 15%;
+	left: 12%;
 	color: #fff;
 	-webkit-transition: opacity 0.5s 0.8s, -webkit-transform 0.5s 0.8s;
 	transition: opacity 0.5s 0.8s, -webkit-transform 0.5s 0.8s;
@@ -272,12 +267,7 @@ svg {
 .slide__text-heading {
 	font-family: "Polar", Helvetica, Arial, sans-serif;
 	font-size: 5rem;
-	margin-bottom: 3rem;
-}
-.logo {
-    margin-bottom: 3em;
-    width: 100%;
-    length: 100%;
+	margin-bottom: 2rem;
 }
 @media (max-width: 991px) {
 	.slide__text-heading {
@@ -305,19 +295,6 @@ svg {
 	font-size: 2.3rem;
 	-webkit-perspective: 1000px;
 	perspective: 1000px;
-    color : #fff;
-}
-.slide__text-link:hover {
-    z-index: 5;
-    display: inline-block;
-    position: relative;
-    padding: 0.5rem;
-    cursor: pointer;
-    font-family: "Open Sans", Helvetica, Arial, sans-serif;
-    font-size: 2.3rem;
-    -webkit-perspective: 1000px;
-    perspective: 1000px;
-    color : #375d56;
 }
 @media (max-width: 991px) {
 	.slide__text-link {
@@ -332,7 +309,7 @@ svg {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #fff;
+	background: #000;
 	-webkit-transform-origin: 50% 100%;
 	transform-origin: 50% 100%;
 	-webkit-transform: rotateX(-85deg);
@@ -344,55 +321,26 @@ svg {
 	will-change: transform;
 }
 .slide__text-link:hover:before {
-    -webkit-transform: rotateX(0deg);
-    transform: rotateX(0deg);
-}
-.slide__content section {
-	background-color: aliceblue;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
-}
-.slide__text h5{
-    font-size: 30px;
-    margin-top: 10px;
-}
-.slide__text nav h5{
-	margin-left: 750px;
-	margin-top: 70px;
-	text-align: center;
-}
-.slide__text h6{
-    font-size: 20px;
-    margin-top: 0px;
+	-webkit-transform: rotateX(0deg);
+	transform: rotateX(0deg);
 }
 
-/*FIN SLIDER PRINCIPAL*/
+/*Partie mini slider*/
 
 
-
-/*-------------------------------------------------------------------------------------------*/
-/*DEBUT SLIDER PRODUITS*/
 .elementWrapper {
 	overflow:hidden;
-	position:absolute;
-	border-radius: 10px;
+	position:relative;
+	border-radius: 4px;
+	background: none;
 	padding: 0px;
-	width: 29.5%;
-	height:98%;
+	width: 400px;
+	height:550px;
 	box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.44);
 	display: flex;
-    float: right;
-    font-size: 2.5em;
-    left: 59%;
-    margin-bottom: 10px;
-}
-.elementWrapper img {
-    width:100%;
-    border-radius: 50%;
-}
+	left: 300px;
 
+}
 .elementArrowWrapper{
 	width: 100%;
 	position: absolute;
@@ -409,14 +357,16 @@ svg {
 	transform-origin: center;
 	transition: all .7s ease;
 	opacity:1;
-    cursor: pointer;
 }
+
 .arrowLeft{
 	transform: translate(-73%) rotate(45deg);
+	cursor: pointer;
 }
 .arrowRight{
 	right:0;
 	transform: translate(73%) rotate(45deg);
+	cursor: pointer;
 }
 .elementBackgroundWrapper{
 	width: 100%;
@@ -533,10 +483,13 @@ svg {
 	left: 0;
 	height: 400px;
 	border: 1px solid #fff;
+	/* background-color: #E91E63; */
 	transform: rotate(45deg);
 }
 
-.loadPage{
+img{width:100%;}
+
+/*.loadPage{
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -546,135 +499,28 @@ svg {
 	top: 0;
 	justify-content: center;
 	align-items: center;
-	background: rgb(72, 66, 53);
+	background: rgb(251, 173, 196);
 	pointer-events:none;
+}
+
+.loadPage{
 	transition:all .5s ease;
 }
 .loadPage img{
 	max-width:200px;
-}
-
+}*/
 
 /*---------------------------------------------------------------------------------*/
 /*CARTE GOOGLE MAPS*/
 
 iframe{
 	display: block;
-    width: 450px;
-    height: 350px;
-    border-radius:5px;
-    position: relative;
-    top: 0px;
-    float: right;
-    margin: 50px
-
-}
-
-
-/*---------------------------------------------------------------------------------*/
-/*DEBUT RESEAUX SOCIAUX*/
-
-/* ---------- FONTAWESOME ---------- */
-
-
-
-#social_network {
-    width: 991px;
-    height:50px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-bottom-width: 50px;
-    margin-bottom: 50px;
-    padding-left: 0px;
-    margin-left: 135px;
-    margin-top: 30px;
-}
-
-[class*="fontawesome-"] {
-    font-family: 'FontAwesome', sans-serif;
-}
-
-
-nav {
-    margin: 20px;
-    padding: 0 20px;
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    background-color: transparent ;
-    padding: 10px 10px;
-    text-align: center;
-    cursor: pointer;
-}
-
-nav ul li {
-    display: inline-block;
-    padding: 0px;
-    margin: 0px 50px;
-    border: 0px solid white;
-    border-radius: 10px;
-    background-color: white;
-    -webkit-box-shadow: inset 0px 0px 10px black;
-    min-width: 20px;
-    text-align: center;
-    position: relative;
-
-}
-
-nav ul li div {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 10px;
-    background-color: transparent ;
-    -webkit-transition: width 1s, height 1s, top 1s, left 1s;
-    transition: width 1s, height 1s, top 1s, left 1s;
-}
-
-nav ul li a {
-    width: 20px;
-    height: 20px;
-    text-decoration: none;
-    position: absolute;
-    top: 10px;
-    left: 0px;
-    -webkit-transition: top 1s, left 1s;
-    transition: top 1s, left 1s;
-}
-
-nav ul li a span {
-    font-size: 7.9em;
-    color: white;
-    text-shadow: 0px 0px 6px #82cec7, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #375d56, 0px 0px 6px #82cec7;
-    -webkit-transition: color 2s;
-    transition: color 2s;
-}
-
-nav ul li:hover div {
-    width: 0px;
-    height: 0px;
-    top: -10px;
-    left: 20px;
-}
-nav ul li:hover a {
-    top: -10px;
-    left: -15px;
-
-}
-nav ul li:hover a span {
-    color: transparent;
-}
-
-/* container text two */
-#container_text_two{
-	display: block;
-	width: 60%;
+	width: 450px;
+	height: 350px;
+	border-radius:5px;
+	position: relative;
+	top: 0px;
 	float: right;
-}
+	margin: 70px
 
-h5
+}
