--- a/public/assets/css/loginstyle.css
+++ b/public/assets/css/loginstyle.css
@@ -13,11 +13,7 @@ body {
 
 
 
-canvas{
-    position: absolute;
-    top:50px; right: 0; bottom: 0; left: 0;
-    z-index: 0;
-}
+
 /* =========================================
 Stark Industries Logo
 ========================================= */
@@ -527,5 +523,86 @@ Utilitaires
     canvas{
         display: none;
     }
+
+}
+
+
+/*******************
+	 RESPONSIVE
+ *******************/
+
+/** Supérieur à 1200px **/
+@media (min-width: 1200px){
+
+    /** Utilitaires **/
+
+    canvas{
+        position: absolute ;
+        top:50px; right: 0; bottom: 0; left: 0;
+        z-index: 0;
+    }
+
+}
+
+/** Supérieur à 992px et inférieur à 1200px **/
+@media (min-width: 992px) and (max-width: 1200px){
+
+    .containerconnect {
+        width: 100%;
+        margin: auto;
+
+    }
+
+    /** New shops **/
+    #new_shop img{
+        width: 240px;
+        height: 170px;
+    }
+
+    /** Links category **/
+    #low_nav_desktop ul li a{
+        padding: 10px 15px;
+    }
+
+    .at-grid{
+        transform: scale(0.8);
+    }
+
+}
+
+/** Supérieur à 768px et inférieur à 992px **/
+@media (min-width: 700px) and (max-width: 992px){
+
+
+    .containerconnect {
+        width: 100%;
+        margin: auto;
+        height: 100%;
+    }
+
+    /** New shops **/
+    #new_shop img{
+        width: 240px;
+        height: 170px;
+    }
+
+    /** Links category **/
+    #low_nav_desktop ul li a{
+        padding: 10px 15px;
+    }
+
+    .at-grid{
+        transform: scale(0.8);
+    }
+
+}
+
+/*** Inférieur à 768px ***/
+@media (max-width: 700px){
+
+}
+
+@media (max-width: 550px){
+
 
 }
