--- a/public/assets/css/contact-style.css
+++ b/public/assets/css/contact-style.css
@@ -168,6 +168,14 @@ form input[type="submit"]:active {
   color: #1D8C7E;
 }
 
+
+/* Si les infos ont été insérées en BDD */
+.contact_success{
+  font-size:20px;
+  color:#80C2BB;
+  padding: 20px 0 100px 0px;
+}
+
 @media (max-width: 992px) and (min-width: 768px){
 
   #contact{
