--- a/public/assets/css/news-style.css
+++ b/public/assets/css/news-style.css
@@ -172,6 +172,13 @@ form input[type="submit"]:active {
   color: #1D8C7E;
 }
 
+/* Si les infos ont été insérées en BDD */
+.news_success{
+  font-size:20px;
+  color:#80C2BB;
+  padding: 20px 0 100px 0px;
+}
+
 @media (max-width: 992px) and (min-width: 768px){
 
   #newsletter{
